(library
 (foreign_stubs
  (language c)
  (names blocking_sync dynamic stubs))
 (name basement)
 (public_name basement)
 (ocamlopt_flags
  :standard
  (:include ocamlopt-flags))
 (libraries)
 (preprocess no_preprocessing)
 (lint
  (pps ppx_base ppx_base_internal -check-doc-comments
    -type-conv-keep-w32=both -raise-on-lint-error -apply=js_style,deriving))
 (js_of_ocaml
  (javascript_files runtime.js))
 (wasm_of_ocaml
  (javascript_files runtime.js)
  (wasm_files runtime.wat)))

(rule
 (targets ocamlopt-flags)
 (deps)
 (action
  (write-file ocamlopt-flags "(-O3 -flambda2-inline-max-depth 10)")))

(alias
 (name default)
 (deps primitives.ml.diff))

(rule
 (targets primitives.ml.diff)
 (deps primitives.ml primitives_upstream.ml)
 (action
  (bash "diff %{deps} > %{targets} || true")))
